fix jumping issue on input click

--- a/src/components/Pagination/Pagination_shim.css
+++ b/src/components/Pagination/Pagination_shim.css
@@ -37,6 +37,10 @@
 		gap: 0.5rem;
 	}
 
+	.neo-input-editable__wrapper {
+		min-height: unset;
+	}
+
 	.neo-input {
 		height: 32px;
 		min-height: unset;
